--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,8 @@
 <div class='container'>
-  <h1>{{ template }}</h1>
+  <div class='row'>
+  <section class='home home-me'></section>
+  <section class='home home-projects'></section>
+  <section class='home home-contact'></section>
+  <section class='home home-thoughts'></section>
+  </div>
 </div>
