--- a/views/home.html
+++ b/views/home.html
@@ -1,14 +1,14 @@
 <div class='jumbotron'>
   <section class='container'>
     <div class='row'>
-      <div class='form-group col-xs-5 col-md-offset-4'>
+      <div class='form-group col-xs-12 col-md-8 col-md-offset-2'>
         <input class='form-control' placeholder='search me' type='text'>
       </div>
     </div>
   </section>
 </div>
 
-<div class='container'>
+<div class='body container'>
 
   <section class='row'>
     <div class='card'>
