--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,7 @@
   <section class='container'>
     <div class='row'>
       <div class='form-group col-xs-12 col-md-8 col-md-offset-2'>
-        <input class='form-control' placeholder='search me' type='text'>
+        <input class='form-control search-me' placeholder='search me' type='text'>
       </div>
     </div>
   </section>
@@ -38,7 +38,6 @@
     <div class='card'>
       <div class='col-xs-12'>
         <h2 class='inset-text'>Recent Projects</h2>
-
       </div>
     </div>
   </section>
