--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
   background-color: #ecf0f1;
   background-image: url('../assets/background.png');
 }
+
+.search-me {
+  margin-top: 10%;
+}
+
 .body {
   padding: 2%;
   margin: auto auto;
@@ -13,6 +18,7 @@ body {
 .jumbotron {
   background-image: url('../assets/header-background.jpg');
   background-size: 100% 100%;
+  height: 230px;
 
 }
 
