--- a/views/home.cards.html
+++ b/views/home.cards.html
@@ -1,24 +1,4 @@
-<div class='jumbotron'>
-  <section class='container'>
-    <div class='row'>
-      <div class='jumbo-intro'>
-        <h1>
-          Scott Moss
-        </h1>
-        <h2>
-          Full Stack Engineer
-        </h2>
-      </div>
-      <div class='form-group '>
-        <input ng-model='lookUp' autofocus id='search' x-webkit-speech class='form-control search-me' placeholder='search me' type='text'>
-      </div>
-    </div>
-  </section>
-</div>
-
-<div ui-view class="slide-top"></div>
-
-<!-- <div class='body container' ng-if='true'>
+<div class='body container'>
 
   <div ng-repeat='header in headers | filter:lookUp' class='slide-top'>
     <card title='{{ header.header }}' >
@@ -26,7 +6,7 @@
     </card>
   </div>
 
-  <card title='Scott Moss'>
+  <!-- <card title='Scott Moss'>
     <row width='col-xs-4 col-md-offset-4'>
       <h3 class="inset-text">
         Full Stack Engineer
@@ -50,5 +30,5 @@
     <row width='col-xs-12'>
 
     </row>
-  </card>
-</div> -->
+  </card> -->
+</div>
