--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ body {
 }
 
 .search-me {
-  margin-top: 10%;
+  margin-top: 1%;
+  height: 40px;
+  font-size: 0.9em;
 }
 
 .body {
@@ -19,12 +21,19 @@ body {
   background-image: url('../assets/header-background.jpg');
   background-size: 100% 100%;
   height: 230px;
+  padding-top: 10px;
+  text-align: center;
+}
 
+.jumbo-intro {
+  color: #34495e;
+  text-shadow: 1px 2px 1px lightgrey;
 }
 
 .hit {
   cursor: pointer;
 }
+
 ul {
   list-style: none;
   text-align: center;
@@ -35,7 +44,7 @@ ul li {
 }
 
 .pic {
-  width: 35%;
+  width: 20%;
   margin-bottom: 3%;
   opacity: 0.8;
 }
