--- a/client/styles/css/style.css
+++ b/client/styles/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #ecf0f1;
-  background-image: url('../assets/background.png');
+  background-image: url('../../assets/background.png');
 }
 
 .search-me {
@@ -18,7 +18,7 @@ body {
   text-shadow: 1px 2px 1px white;
 }
 .jumbotron {
-  background-image: url('../assets/header-background.jpg');
+  background-image: url('../../assets/header-background.jpg');
   background-size: 100% 100%;
   height: 230px;
   padding-top: 10px;
