--- a/client/styles/css/style.css
+++ b/client/styles/css/style.css
@@ -1,64 +1,49 @@
 body {
   background-color: #ecf0f1;
-  background-image: url('../../assets/background.png');
+  background-imgage: url("../../assets/background.png");
 }
-
 .search-me {
   margin-top: 1%;
   height: 40px;
   font-size: 0.9em;
 }
-
-.body {
-  padding: 2%;
-  margin: auto auto;
-}
 .inset-text {
-  color: grey;
-  text-shadow: 1px 2px 1px white;
+  color: #808080;
+  text-shadow: 1px 2px 1px #fff;
 }
 .jumbotron {
-  background-image: url('../../assets/header-background.jpg');
+  background-imgage: url("../../assets/header-background.jpg");
   background-size: 100% 100%;
   height: 230px;
   padding-top: 10px;
   text-align: center;
 }
-
 .jumbo-intro {
   color: #34495e;
-  text-shadow: 1px 2px 1px lightgrey;
+  text-shadow: 1px 2px 1px #d3d3d3;
 }
-
 .hit {
   cursor: pointer;
 }
-
-ul {
+.ul {
   list-style: none;
   text-align: center;
 }
-
-ul li {
-  display: inline-block;
+.ul li {
+  diplay: inline-block;
 }
-
 .pic {
   width: 20%;
-  margin-bottom: 3%;
-  opacity: 0.8;
 }
-
 .card {
-  background-color: white;
-  box-shadow: -1px 1px 3px 1px lightgrey;
+  background-color: #fff;
+  box-shadow: -1px 1px 3px 1px #d3d3d3;
   padding: 2%;
   margin-bottom: 1%;
   text-align: center;
   border-radius: 3px;
   color: #2980b9;
 }
-
 .loop {
-  color: #0ACDC7;
+  color: #0acdc7;
 }
