update package.json for heroku postinstall stylus build

--- a/client/styles/css/style.css
+++ b/client/styles/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #ecf0f1;
-  background-imgage: url("../../assets/background.png");
+  background-img: url("../../assets/background.png");
 }
 .search-me {
   margin-top: 1%;
