--- a/client/styles/css/style.css
+++ b/client/styles/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #ecf0f1;
-  background-img: url("../../assets/background.png");
+  background-image: url("../../assets/background.png");
 }
 .search-me {
   margin-top: 1%;
@@ -12,7 +12,7 @@ body {
   text-shadow: 1px 2px 1px #fff;
 }
 .jumbotron {
-  background-imgage: url("../../assets/header-background.jpg");
+  background-image: url("../../assets/header-background.jpg");
   background-size: 100% 100%;
   height: 230px;
   padding-top: 10px;
@@ -40,7 +40,6 @@ body {
   box-shadow: -1px 1px 3px 1px #d3d3d3;
   padding: 2%;
   margin-bottom: 1%;
-  text-align: center;
   border-radius: 3px;
   color: #2980b9;
 }
