--- a/client/styles/sty/style.styl
+++ b/client/styles/sty/style.styl
@@ -8,7 +8,7 @@ googleHeaderUrl = '../../assets/header-background.jpg'
 
 body
   background-color light-grey
-  background-img url(backGroundUrl)
+  background-image url(backGroundUrl)
 
 .search-me
   margin-top 1%
@@ -20,7 +20,7 @@ body
   text-shadow 1px 2px 1px white
 
 .jumbotron
-  background-imgage url(googleHeaderUrl)
+  background-image url(googleHeaderUrl)
   background-size 100% 100%
   height 230px
   padding-top 10px
@@ -48,7 +48,6 @@ body
   box-shadow -1px 1px 3px 1px lightgrey
   padding 2%
   margin-bottom 1%
-  text-align center
   border-radius 3px
   color softBlue
 
