(feat) seperate lr and nodemon in gulp & concat scripts & add media queries for mobile version

--- a/client/src/app/home.html
+++ b/client/src/app/home.html
@@ -2,12 +2,8 @@
   <section class='container'>
     <div class='row'>
       <div class='jumbo-intro'>
-        <h1>
-          Scott Moss
-        </h1>
-        <h2>
-          Full Stack Engineer
-        </h2>
+        <h1>Scott Moss</h1>
+        <h2>Full Stack Engineer</h2>
       </div>
       <div class='form-group '>
         <input ng-model='lookUp.$'
